[project]
name = "ASCENT"
version = "1.2.1"

description = "A pipeline for sample-specific computational modeling of electrical stimulation of peripheral nerves"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/wmglab-duke/ascent"
documentation = "https://wmglab-duke-ascent.readthedocs.io/en/latest/"
changelog = "https://github.com/wmglab-duke/ascent/releases"

[tool.poetry]
name = "ASCENT"
version = "v1.2.1"
authors = ["Pelot, N. A. <nikki.pelot@duke.edu>"]
description = "A pipeline for sample-specific computational modeling of electrical stimulation of peripheral nerves"
readme = "README.md"
license = 'See LICENSE.md'

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scipy = "~1.10.0"
ffmpeg = "^1.4"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
opencv-python = "^4.8.0.74"
openpyxl = "^3.1.2"
pandas = "^2.0.3"
pillow = "^10.0.0"
pyclipper = "^1.3.0.post4"
pygame = "^2.5.0"
pymunk = "^6.5.1"
quantiphy = "^2.19"
scikit-image = "^0.21.0"
seaborn = "^0.12.2"
shapely = "^2.0.1"
xlsxwriter = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.rstcheck]
ignore_directives = [
    "details",
    "argparse",
    "changelog",
    "bibliography",
    "tab",
    "automodule",
    "youtube"
]

[tool.flynt]
line-length = 120

[tool.docformatter]
wrap-summaries = 0
wrap-descriptions = 0
in-place = true
